# doc-forense

./: .env.example  docker-compose.yml  nginx.conf
backend/: .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py  models.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.tsx
frontend/src/components/: AddEvidence.tsx  AddMapImage.tsx  DownloadTemplateButton.tsx  Editor.tsx  EditorContainer.tsx  EditorHeader.tsx  NewTemplateButton.tsx  PageNavigation.tsx  SaveTemplateButton.tsx  TemplateListModal.tsx  TemplateNameInput.tsx
frontend/src/config/: pocketbase.ts  tools.ts  utils.ts
frontend/src/context/: EditorProvider.tsx
frontend/src/css/: index.css
frontend/src/pages/: EditorPage.tsx
frontend/src/types/: galileu.types.ts  pocketbase-types.ts
pocketbase/: .gitignore
pocketbase/pb_data/: auxiliary.db  auxiliary.db-shm  auxiliary.db-wal  data.db  data.db-shm  data.db-wal
pocketbase/pb_data/backups/: pb_backup_acme_20250214090049.zip.attrs
